--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
       - name: goreleaser release
         uses: goreleaser/goreleaser-action@v2
         with:
-          args: release --release-notes ${{ steps.release-notes-download.outputs.download-path }}/release-notes.txt --rm-dist --timeout 2h30m
+          args: release --release-notes ${{ steps.release-notes-download.outputs.download-path }}/release-notes.txt --rm-dist --timeout 2h30m --parallelism 5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   #  terraform-provider-release:
@@ -117,5 +117,5 @@ jobs:
           git config --local user.email changelogbot@hashicorp.com
           git config --local user.name changelogbot
           git add CHANGELOG.md
-          git commit -m "Update CHANGELOG.md after $PREVIOUS_RELEASE_TAG" 
+          git commit -m "Update CHANGELOG.md after ${PREVIOUS_RELEASE_TAG}" 
           git push
