--- a/.github/workflows/post_publish.yml
+++ b/.github/workflows/post_publish.yml
@@ -1,27 +1,17 @@
 name: Post Publish
 on:
-  release:
-    types: [published]
+  workflow_run:
+    workflows: [Release]
+    types:
+      - completed
 jobs:
-  tidy:
-    name: Tidy Asana
+  on-success:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - uses: breathingdust/github-asana-tidy@v1
-        with:
-          asana_pat: ${{ secrets.asana_pat }}
-          asana_target_section_gid: '1141945723817371'
-          asana_workspace_gid: '90955849329269'
-          asana_project_gid: '632425409545160'
-          asana_github_url_field_gid: '1134594824474912'
-          github_release_name: ${{ github.event.release.tag_name }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  project-archive:
-    name: Archive Released Cards
+      - run: echo 'The triggering workflow succeeded'
+  on-failure:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
     steps:
-      - uses: breathingdust/github-project-archive@v1
-        with:
-          github_done_column_id: 11513756
-          github_release_name: ${{ github.event.release.tag_name }}
-          github_token: ${{ secrets.ORGSCOPED_GITHUB_TOKEN }}
+      - run: echo 'The triggering workflow failed'
