--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,9 @@ jobs:
         run: echo "::set-output name=version::$(cat ./.go-version)"
   release-notes:
     runs-on: macos-latest
+    outputs:
+      branch: ${{ steps.git-branch.outputs.branch }}
+      tag: ${{ steps.git-branch.outputs.tag }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -30,6 +33,12 @@ jobs:
           name: release-notes
           path: release-notes.txt
           retention-days: 1
+      - id: git-branch
+        run: |
+          tag=$(git describe --abbrev=0 --match='v*.*.*' --tags)
+          branch=$(git branch --contains tags/$tag | xargs)
+          echo ::set-output name=branch::$branch
+          echo ::set-output name=tag::$tag
   terraform-provider-release:
     needs: [go-version, release-notes]
     runs-on: macos-latest
@@ -45,34 +54,19 @@ jobs:
           args: release --release-notes ${{ steps.release-notes-download.outputs.download-path }}/release-notes.txt --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  release-branch:
-    runs-on: macos-latest
-    outputs:
-      branch: ${{ steps.git-branch.outputs.branch }}
-      tag: ${{ steps.git-branch.outputs.tag }}
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - id: git-branch
-        run: |
-          tag=$(git describe --abbrev=0 --match='v*.*.*' --tags)
-          branch=$(git branch --contains tags/$tag | xargs)
-          echo ::set-output name=branch::$branch
-          echo ::set-output name=tag::$tag
   changelog-newversion:
-    needs: [terraform-provider-release, release-branch]
+    needs: [release-notes, terraform-provider-release]
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          ref: ${{ needs.release-branch.outputs.branch }}
+          ref: ${{ needs.release-notes.outputs.branch }}
       - name: Update Changelog Header
         id: changelog
         run: |
           CHANGELOG_FILE_NAME="CHANGELOG.md"
-          PREVIOUS_RELEASE_TAG=${{ needs.release-branch.outputs.tag }}
+          PREVIOUS_RELEASE_TAG=${{ needs.release-notes.outputs.tag }}
           
           # Add Release Date
           RELEASE_DATE=`date +%B' '%e', '%Y`
@@ -94,5 +88,5 @@ jobs:
           git config --local user.email changelogbot@hashicorp.com
           git config --local user.name changelogbot
           git add CHANGELOG.md
-          git commit -m "Update CHANGELOG.md after ${{ needs.release-branch.outputs.tag }}" 
+          git commit -m "Update CHANGELOG.md after ${{ needs.release-notes.outputs.tag }}" 
           git push
