--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,10 @@ jobs:
     needs: [go-version, release-notes]
     runs-on: macos-latest
     steps:
+      - uses: actions/checkout@v2
+        with:
+          # Allow tag to be fetched when ref is a commit
+          fetch-depth: 0
       - name: Release Notes Download
         uses: actions/download-artifact@v2
         with:
