--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,6 +48,7 @@ jobs:
           # Allow tag to be fetched when ref is a commit
           fetch-depth: 0
       - name: Release Notes Download
+        id: release-notes-download
         uses: actions/download-artifact@v2
         with:
           name: release-notes
