--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,6 @@ jobs:
   release-notes:
     runs-on: macos-latest
     outputs:
-      branch: ${{ steps.git-branch.outputs.branch }}
       tag: ${{ steps.git-branch.outputs.tag }}
     steps:
       - uses: actions/checkout@v2
@@ -36,8 +35,6 @@ jobs:
       - id: git-branch
         run: |
           tag=$(git describe --abbrev=0 --match='v*.*.*' --tags)
-          branch=$(git branch --contains tags/$tag | xargs)
-          echo ::set-output name=branch::$branch
           echo ::set-output name=tag::$tag
   terraform-provider-release:
     needs: [go-version, release-notes]
@@ -69,7 +66,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          ref: ${{ needs.release-notes.outputs.branch }}
+          ref: main
       - name: Update Changelog Header
         id: changelog
         run: |
@@ -92,9 +89,21 @@ jobs:
           echo New minor version is: v$NEW_RELEASE_LINE
           
           echo -e "## $NEW_RELEASE_LINE (Unreleased)\n$(cat $CHANGELOG_FILE_NAME)" > $CHANGELOG_FILE_NAME
-      - run: |
+      - run: |          
           git config --local user.email changelogbot@hashicorp.com
           git config --local user.name changelogbot
           git add CHANGELOG.md
           git commit -m "Update CHANGELOG.md after ${{ needs.release-notes.outputs.tag }}" 
-          git push
+          
+          commit=$(git rev-list -1 ${{ needs.release-notes.outputs.tag }})
+          branch=$(git branch --contains $commit)
+          if [[ ${branch} == *"main"* ]]; then
+            git push
+          else
+            releaseBranches=(`echo $branch | grep -Eo "release/.*"`)
+            if [[ ${#releaseBranchs[@]} -eq 1 ]]; then
+              git push origin HEAD:${releaseBranches[0]}
+            else
+              echo "Unable to update CHANGELOG.md after ${{ needs.release-notes.outputs.tag }}"
+            fi
+          fi
