--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,22 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          ref: main
+      - run: |
+          commit=$(git rev-list -1 ${{ needs.release-notes.outputs.tag }})
+          branch=$(git branch --contains $commit)
+          
+          if [[ ${branch} == *"main"* ]]; then
+            git checkout main
+          else
+            releaseBranches=(`echo $branch | grep -Eo "release/.*"`)
+  
+            if [[ ${#releaseBranches[@]} -eq 1 ]]; then
+              git checkout $releaseBranches
+            else
+              echo "Unable to checkout release branch to update CHANGELOG.md after ${{ needs.release-notes.outputs.tag }}"
+              exit 1
+            fi
+          fi
       - name: Update Changelog Header
         id: changelog
         run: |
@@ -94,16 +109,4 @@ jobs:
           git config --local user.name changelogbot
           git add CHANGELOG.md
           git commit -m "Update CHANGELOG.md after ${{ needs.release-notes.outputs.tag }}" 
-          
-          commit=$(git rev-list -1 ${{ needs.release-notes.outputs.tag }})
-          branch=$(git branch --contains $commit)
-          if [[ ${branch} == *"main"* ]]; then
-            git push
-          else
-            releaseBranches=(`echo $branch | grep -Eo "release/.*"`)
-            if [[ ${#releaseBranches[@]} -eq 1 ]]; then
-              git push origin HEAD:$releaseBranches
-            else
-              echo "Unable to update CHANGELOG.md after ${{ needs.release-notes.outputs.tag }}"
-            fi
-          fi
+          git push
