--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,6 +66,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          ref: main
       - run: |
           COMMIT=$(git rev-list -1 ${{ needs.release-notes.outputs.tag }})
           echo -e "Commit: $COMMIT"
@@ -73,7 +74,7 @@ jobs:
           BRANCH=$(git branch --contains $COMMIT)
           echo -e "Branch: $BRANCH"
          
-          RELEASE_BRANCHES=`echo $BRANCH | grep -Eo "release/.*"`
+          RELEASE_BRANCHES=`echo $BRANCH | sed -n '/release\//p' | xargs`
           echo -e "Release Branches: $RELEASE_BRANCHES"
         
           
