--- a/.github/workflows/post_publish.yml
+++ b/.github/workflows/post_publish.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          ref: ${{ github.event.workflow_run.head_branch }}
+          ref: ${{ github.ref_name }}
       - name: Update Changelog Header
         id: changelog
         run: |
