--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,3 +53,57 @@ jobs:
           args: release --release-notes ${{ steps.release-notes-download.outputs.download-path }}/release-notes.txt --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  latest-tag:
+    needs: [ terraform-provider-release ]
+    runs-on: macos-latest
+    outputs:
+      tag: ${{ steps.latest-tag.outputs.tag }}
+    steps:
+      - uses: actions/checkout@v2
+        id: latest-tag
+        with:
+          # Allow tag to be fetched when ref is a commit
+          fetch-depth: 0
+      - run: |
+          LATEST=$(git describe --abbrev=0 --match='v*.*.*' --tags)
+          echo ::set-output name=tag::$LATEST
+  changelog-newversion:
+    needs: [ terraform-provider-release,  latest_tag]
+    # write new changelog header only if release tag is $LATEST i.e. exists on main
+    # and not a backport release branch
+    if: github.ref_name == needs.latest_tag.outputs.tag
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          ref: main
+      - name: Update Changelog Header
+        id: changelog
+        run: |
+          CHANGELOG_FILE_NAME="CHANGELOG.md"
+          PREVIOUS_RELEASE_TAG=$(git describe --abbrev=0 --match='v*.*.*' --tags)
+          echo ::set-output name=tag::$PREVIOUS_RELEASE_TAG
+          
+          # Add Release Date
+          RELEASE_DATE=`date +%B' '%e', '%Y`
+          sed -i -e "1 s/Unreleased/$RELEASE_DATE/" $CHANGELOG_FILE_NAME           
+          
+          # Prepend next release line
+          echo Previous release is: $PREVIOUS_RELEASE_TAG
+          
+          NEW_RELEASE_LINE=$(echo $PREVIOUS_RELEASE_TAG | awk -F. '{
+              $1 = substr($1,2)
+              $2 += 1
+              printf("%s.%01d.0\n\n", $1, $2);
+          }')
+          
+          echo New minor version is: v$NEW_RELEASE_LINE
+          
+          echo -e "## $NEW_RELEASE_LINE (Unreleased)\n$(cat $CHANGELOG_FILE_NAME)" > $CHANGELOG_FILE_NAME
+      - run: |
+          git config --local user.email changelogbot@hashicorp.com
+          git config --local user.name changelogbot
+          git add CHANGELOG.md
+          git commit -m "Update CHANGELOG.md after ${{ steps.changelog.outputs.tag }}" 
+          git push
