--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,48 +30,50 @@ jobs:
           name: release-notes
           path: release-notes.txt
           retention-days: 1
-  terraform-provider-release:
-    needs: [go-version, release-notes]
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          # Allow tag to be fetched when ref is a commit
-          fetch-depth: 0
-      - uses: actions/setup-go@v2
-        with:
-          go-version: ${{ needs.go-version.outputs.version }}
-      - name: Release Notes Download
-        id: release-notes-download
-        uses: actions/download-artifact@v2
-        with:
-          name: release-notes
-          path: /tmp
-      - name: goreleaser release (with release notes)
-        uses: goreleaser/goreleaser-action@v2
-        with:
-          args: release --release-notes ${{ steps.release-notes-download.outputs.download-path }}/release-notes.txt --rm-dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  latest-tag:
-    needs: [ terraform-provider-release ]
+#  terraform-provider-release:
+#    needs: [go-version, release-notes]
+#    runs-on: macos-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#        with:
+#          # Allow tag to be fetched when ref is a commit
+#          fetch-depth: 0
+#      - uses: actions/setup-go@v2
+#        with:
+#          go-version: ${{ needs.go-version.outputs.version }}
+#      - name: Release Notes Download
+#        id: release-notes-download
+#        uses: actions/download-artifact@v2
+#        with:
+#          name: release-notes
+#          path: /tmp
+#      - name: goreleaser release (with release notes)
+#        uses: goreleaser/goreleaser-action@v2
+#        with:
+#          args: release --release-notes ${{ steps.release-notes-download.outputs.download-path }}/release-notes.txt --rm-dist
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  highest-version-tag:
+    needs: [ release-notes ]
     runs-on: macos-latest
     outputs:
-      tag: ${{ steps.latest-tag.outputs.tag }}
+      tag: ${{ steps.highest-version-tag.outputs.tag }}
     steps:
       - uses: actions/checkout@v2
-        id: latest-tag
+        id: highest-version-tag
         with:
           # Allow tag to be fetched when ref is a commit
           fetch-depth: 0
       - run: |
-          LATEST=$(git describe --abbrev=0 --match='v*.*.*' --tags)
-          echo ::set-output name=tag::$LATEST
+          HIGHEST=$(git tag | sort -V | tail -1)
+          echo ::set-output name=tag::$HIGHEST
   changelog-newversion:
-    needs: [ terraform-provider-release, latest-tag]
-    # write new changelog header only if release tag is $LATEST i.e. exists on main
-    # and not a backport release branch
-    if: github.ref_name == needs.latest-tag.outputs.tag
+    needs: [highest-version-tag]
+    # write new changelog header only if release tag is the $HIGHEST i.e. exists on main
+    # and not a backport release branch (e.g. release/3.x). This results in
+    # manually updating the CHANGELOG header if releasing from the non-default branch.
+    # TODO: find a more deterministic way to determine release branch from tag commit
+    if: github.ref_name == needs.highest-version-tag.outputs.tag
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
@@ -79,7 +81,6 @@ jobs:
           fetch-depth: 0
           ref: main
       - name: Update Changelog Header
-        id: changelog
         run: |
           CHANGELOG_FILE_NAME="CHANGELOG.md"
           PREVIOUS_RELEASE_TAG=${{ github.ref_name }}
@@ -106,3 +107,12 @@ jobs:
           git add CHANGELOG.md
           git commit -m "Update CHANGELOG.md after ${{ github.ref_name }}" 
           git push
+  upload-tag-before-post-publish:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Save Release Tag
+        run: echo ${{ github.ref_name }} > release_tag.data
+      - uses: actions/upload-artifact@v2
+        with:
+          name: release_tag
+          path: release_tag.data
