--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,41 +30,40 @@ jobs:
           name: release-notes
           path: release-notes.txt
           retention-days: 1
-  terraform-provider-release:
-    name: 'Terraform Provider Release'
-    needs: [go-version, release-notes]
-    uses: hashicorp/ghaction-terraform-provider-release/.github/workflows/hashicorp.yml@v1
-    secrets:
-      hc-releases-aws-access-key-id: '${{ secrets.TF_PROVIDER_RELEASE_AWS_ACCESS_KEY_ID }}'
-      hc-releases-aws-secret-access-key: '${{ secrets.TF_PROVIDER_RELEASE_AWS_SECRET_ACCESS_KEY }}'
-      hc-releases-aws-role-arn: '${{ secrets.TF_PROVIDER_RELEASE_AWS_ROLE_ARN }}'
-      hc-releases-fastly-api-token: '${{ secrets.HASHI_FASTLY_PURGE_TOKEN }}'
-      hc-releases-github-token: '${{ secrets.HASHI_RELEASES_GITHUB_TOKEN }}'
-      hc-releases-terraform-registry-sync-token: '${{ secrets.TF_PROVIDER_RELEASE_TERRAFORM_REGISTRY_SYNC_TOKEN }}'
-      setup-signore-github-token: '${{ secrets.HASHI_SIGNORE_GITHUB_TOKEN }}'
-      signore-client-id: '${{ secrets.SIGNORE_CLIENT_ID }}'
-      signore-client-secret: '${{ secrets.SIGNORE_CLIENT_SECRET }}'
-    with:
-      goreleaser-release-args: --timeout 2h
-      hc-releases-aws-role-duration-seconds: 7200
-      release-notes: true
-      setup-go-version: '${{ needs.go-version.outputs.version }}'
+#  terraform-provider-release:
+#    name: 'Terraform Provider Release'
+#    needs: [go-version, release-notes]
+#    uses: hashicorp/ghaction-terraform-provider-release/.github/workflows/hashicorp.yml@v1
+#    secrets:
+#      hc-releases-aws-access-key-id: '${{ secrets.TF_PROVIDER_RELEASE_AWS_ACCESS_KEY_ID }}'
+#      hc-releases-aws-secret-access-key: '${{ secrets.TF_PROVIDER_RELEASE_AWS_SECRET_ACCESS_KEY }}'
+#      hc-releases-aws-role-arn: '${{ secrets.TF_PROVIDER_RELEASE_AWS_ROLE_ARN }}'
+#      hc-releases-fastly-api-token: '${{ secrets.HASHI_FASTLY_PURGE_TOKEN }}'
+#      hc-releases-github-token: '${{ secrets.HASHI_RELEASES_GITHUB_TOKEN }}'
+#      hc-releases-terraform-registry-sync-token: '${{ secrets.TF_PROVIDER_RELEASE_TERRAFORM_REGISTRY_SYNC_TOKEN }}'
+#      setup-signore-github-token: '${{ secrets.HASHI_SIGNORE_GITHUB_TOKEN }}'
+#      signore-client-id: '${{ secrets.SIGNORE_CLIENT_ID }}'
+#      signore-client-secret: '${{ secrets.SIGNORE_CLIENT_SECRET }}'
+#    with:
+#      goreleaser-release-args: --timeout 2h
+#      hc-releases-aws-role-duration-seconds: 7200
+#      release-notes: true
+#      setup-go-version: '${{ needs.go-version.outputs.version }}'
   highest-version-tag:
-    needs: [ terraform-provider-release ]
     runs-on: macos-latest
     outputs:
       tag: ${{ steps.highest-version-tag.outputs.tag }}
     steps:
       - uses: actions/checkout@v2
-        id: highest-version-tag
         with:
           # Allow tag to be fetched when ref is a commit
           fetch-depth: 0
-      - run: |
+      - id: highest-version-tag
+        run: |
           HIGHEST=$(git tag | sort -V | tail -1)
           echo ::set-output name=tag::$HIGHEST
   changelog-newversion:
-      needs: [terraform-provider-release, highest-version-tag]
+      needs: [highest-version-tag]
       # write new changelog header only if release tag is the $HIGHEST i.e. exists on main
       # and not a backport release branch (e.g. release/3.x). This results in
       # manually updating the CHANGELOG header if releasing from the non-default branch.
@@ -104,7 +103,6 @@ jobs:
               git commit -m "Update CHANGELOG.md after ${{ github.ref_name }}" 
               git push
   upload-tag-before-post-publish:
-    needs: [ terraform-provider-release ]
     runs-on: ubuntu-latest
     steps:
       - name: Save Release Tag
